@@ -1,11 +1,12 @@
 package accounts.services;
 
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class AccountService {
@@ -22,7 +23,7 @@ public class AccountService {
     //       username, which can be accessed as
     //       principal.username or authentication.name.
     //
-    //@PreAuthorize(/* Add code here */)
+    @PreAuthorize("hasRole('ADMIN') && #username == principal.username")
     public List<String> getAuthoritiesForUser(String username) {
 
         // TODO-08: Retrieve authorities (roles) for the logged-in user
@@ -36,11 +37,13 @@ public class AccountService {
         //   http://localhost:8080/authorities?username=<username>
         // - Verify that roles of the logged-in user get displayed
         Collection<? extends GrantedAuthority> grantedAuthorities
-                = null; // Modify this line
+                = SecurityContextHolder.getContext()
+                .getAuthentication()
+                .getAuthorities();
 
         return grantedAuthorities.stream()
                                  .map(GrantedAuthority::getAuthority)
-                                 .collect(Collectors.toList());
+                                 .toList();
     }
 
 }
